--- a/home.cabal
+++ b/home.cabal
@@ -17,6 +17,7 @@ cabal-version:       >= 1.8
 
 executable home
   main-is:            home.hs
-  build-depends:      base == 4.6.*
+  build-depends:      base == 4.7.*
   build-depends:      filepath == 1.3.*
-  build-depends:      hakyll == 4.4.*
+  build-depends:      hakyll == 4.5.*
+  build-depends:      hashable == 1.2.*
