--- a/home.cabal
+++ b/home.cabal
@@ -19,5 +19,6 @@ executable home
   main-is:            home.hs
   build-depends:      base == 4.7.*
   build-depends:      filepath == 1.3.*
-  build-depends:      hakyll == 4.5.*
+  build-depends:      hakyll == 4.5.3.*
   build-depends:      hashable == 1.2.*
+  build-depends:      old-locale == 1.0.*
